--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-A Golang data structure/library for efficient file-editing operations on large files.
+Rope file buffer package for fast editing operations on large files.
 
 Maintain a tree, where each node is 'backed' by a buffer or a portion
 of a file.  Then editing operation such as deletions and insertions can
